(library
 (name ant)
 (public_name ant)
 (libraries pprint batteries core core_unix.time_stamp_counter)
 (modules
  Lexer
  Tokens
  Parser
  Syntax
  Pat
  Pattern
  Reference
  Type
  Typing
  Transform
  Fresh
  Memo
  Dependency
  Word
  Words
  Value
  State
  Hash
  Intmap
  Common
  Profile
  PlainTree
  Ir
  SynInfo
  Code
  Tail
  Timer
  Compile
  CompileFfi
  CompileType
  CompileSeq
  CompileMemo
  CompilePlain)
 (preprocess
  (pps ppx_jane ppx_deriving.show ppx_deriving.eq ppx_codegen))
 (foreign_stubs
  (language c)
  (names sl2_stubs sl2_slow_stubs crc32c_stubs hashtbl_stubs timer_stubs)
  (flags -g -fPIC -Wall -march=native -O3 -DSSE2NEON_SUPPRESS_WARNINGS)))

(include_subdirs qualified)

(ocamllex Lexer)

(menhir
 (modules Tokens)
 (explain false)
 (flags --only-tokens))

(menhir
 (modules Parser Tokens)
 (merge_into Parser)
 (explain true)
 (flags
  --external-tokens
  Tokens
  --unused-tokens
  --unused-precedence-levels
  --exn-carries-state))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
